--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.2.0",
     "superagent": "^4.0.0-beta.5",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
+    "webpack": "^3.11.0"
     "xero-node": "^3.0.12"
   }
 }
